Adding ServiceAccountLoader
