# src/main/resources/openapi.yaml
@@ -907,7 +907,51 @@ paths:
       tags:
         - Users
       summary: gets userContext by userId and contextId
-
+  /users/batch/{jobName}/{correlationId}:
+    get:
+      operationId: getBatchJobStatus
+      description: User must have LIST_BATCH_JOBS
+      parameters:
+        - description: jobName
+          explode: false
+          in: path
+          name: jobName
+          required: true
+          schema:
+            type: string
+          style: simple
+        - description: correlationId
+          explode: false
+          in: path
+          name: correlationId
+          required: true
+          schema:
+            type: string
+          style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BatchUserResponse'
+          description: OK
+          headers:
+            Cache-Control:
+              description: "Cache-Control header provides important info on how long a response may be considered fresh"
+              schema:
+                type: string
+              example: "Cache-Control: max-age=3600, public, must-revalidate"
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+      tags:
+        - UserContexts
+      summary: gets batch job status by jobId
 components:
   schemas:
     UserLoad:
